title tweak to see if Github Pages works

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: William's Website
+title: William's New Website
 layout: default
 ---
 <table class="table table-striped table-bordered">
